styles/styles.css
/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
# Generic (CALLED IN ANOTHER FILE)
	- Normalize
	- Box sizing
	- Media width
# Base
	- Typography
	- Elements
	- Links
# Layouts
# Components
	- Header
	- Main
	- Footer
--------------------------------------------------------------*/

/*--------------------------------------------------------------
# Base
--------------------------------------------------------------*/

/* Typography
--------------------------------------------- */
*, *:before, *:after {
    margin: 0;
    padding: 0;
}

:root {
    --text-colour: white;
    --primary-colour: #222324;
    --secondary-colour: #A2A2A2;
    --accent-colour: #03A9F3;
    --korea-red: #CD2E3A;
    --korea-blue: #0047A0;
    --header-font: 'Inter', 'Arial', sans-serif;
    --text-font: 'Montserrat', 'Arial', sans-serif;
    --box-shadow: 0 0 1rem rgba(0, 0, 0, 0.8);
}

body {
	font-size: 1rem;
    font-family: var(--text-font);
    color: white;
    background-color: var(--secondary-colour);
}

h1, h2, h3, h4, h5, h6 {
    margin-bottom: 1rem;
}

h1 {
    font-size: 2rem;
    font-weight: 800;
}

p {
    font-size: 1.1rem;
}

section {
    padding: 2rem;
}

/* Elements
--------------------------------------------- */
ul {
    list-style: none;
}

/* Links
--------------------------------------------- */
a {
	text-decoration: none;
    color: var(--text-colour);
}

a:visited {
	color: var(--text-colour);
}

/*--------------------------------------------------------------
# Layout
--------------------------------------------------------------*/



/*--------------------------------------------------------------
# Components
--------------------------------------------------------------*/

/* Header
--------------------------------------------- */
#header {
    display: flex;
    flex-direction: column;
    justify-content:flex-start;

    background-image: url('../images/black-background.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
}

.logo {
    width: 75px;
    height: auto;
    margin-left: 2rem;
}

.menu-toggle {
    display: block;
    background-color: transparent;
    border: none;
    fill: var(--accent-colour);
    margin-left: 2rem;
    margin-right: 2rem;
}

.menu-toggle:hover {
    fill: var(--text-colour);
}

.menu-toggle.toggled .nav-menu {
    display: block;
}

#header nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--primary-colour);
    padding: 1rem 0;
    z-index: 3;
}

.nav-menu {
    display: none;
    position: absolute;
    background-color: var(--primary-colour);
    top: 107px;
    left: 0;
    right: 0;
    z-index: 3;
    text-align: center;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
}

.nav-menu a {
    display: block;
    color: var(--accent-colour);
    padding: 1rem;
    font-size: 1.1rem;
    font-weight: bold;

    transition: transform 0.3s;
}

.nav-menu a:hover {
    transform: scale(1.1);
    color: var(--text-colour);
}

.site-navigation.toggled .nav-menu {
    display: block;
}

.intro-banner {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 100vh;
    padding: 1rem;
    gap: 2rem;
    z-index: 2;
}

.intro-banner p {
    opacity: 0;
    transition: opacity 1.5s ease-in-out;
}

.intro-banner p:first-child {
    font-size: 4rem;
}

.intro-banner p:nth-child(2) {
    font-size: 3rem;
}

.intro-banner p:nth-child(3) {
    font-size: 2rem;
}

.my-name {
    color: var(--accent-colour);
    font-weight: 650;
}

#nav-down {
    color: var(--accent-colour);
    font-size: 64px;
    padding: 1rem;
}

.nav-down-btn {
    cursor: pointer;
    opacity: 0;
    position: absolute;
    bottom: 3%;
    margin: 0 auto;

    transition: opacity 1s ease-in-out;
    animation: 2s bounce-down infinite normal;
    z-index: 2;
}

@keyframes bounce-down {
    0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
    40% {transform: translateY(-30px);} 
    60% {transform: translateY(-15px);} 
}


#musical-notes {
    position: absolute;
    overflow: hidden;
    height: 100%;
    width: 100%;
}

.musical-note {
    position: absolute;
    animation: rain-notes 6s ease-in-out -2s infinite;
    transform-origin: left top;
    z-index: 1;
}

.musical-note:nth-child(even) svg {
    fill: var(--korea-red);
}

.musical-note:nth-child(odd) svg {
    fill: var(--korea-blue);
}

.musical-note:nth-child(1) {
    left: 10%;
}
.musical-note:nth-child(2) {
    left: 20%; animation-delay: -5s;
}
.musical-note:nth-child(3) {
    left: 30%; animation-delay: -3s;
}
.musical-note:nth-child(4) {
    left: 40%; animation-delay: -2.35s;
}
.musical-note:nth-child(5) {
    left: 50%; animation-delay: -4s;
}
.musical-note:nth-child(6) {
    left: 60%; animation-delay: -6s;
}
.musical-note:nth-child(7) {
    left: 70%; animation-delay: -1.5s;
}
.musical-note:nth-child(8) {
    left: 80%; animation-delay: -2s;
}
.musical-note:nth-child(9) {
    left: 90%; animation-delay: -3.5s;
}
.musical-note:nth-child(10) {
    left: 100%; animation-delay: -2.75s;
}
.musical-note:nth-child(11) {
    left: 40%; animation-delay: -1s;
}
.musical-note:nth-child(12) {
    left: 60%; animation-delay: -3.25s;
}

@keyframes rain-notes {
    0% { transform: rotateZ(15deg) rotateY(0deg) translate(0, 0); }
    25% { transform: rotateZ(5deg) rotateY(360deg) translate(0vw, 20vh); }
    50% { transform: rotateZ(15deg) rotateY(720deg) translate(5vw, 60vh); }
    75% { transform: rotateZ(5deg) rotateY(1080deg) translate(0vw, 80vh); }
    100% { transform: rotateZ(15deg) rotateY(1440deg) translate(10vw, 96vh); }
}

@media (min-width: 37.5em) {
    .menu-toggle {
        display: none;
    }

    .site-navigation .nav-menu,
    .site-navigation.toggled .nav-menu {
        display: flex;
        position: relative;
        top: 0;
        gap: 2rem;
        margin: 0 2rem;
        box-shadow: none;
        /* z-index: 2; */
    }
}

@media (min-width: 50em) {
    .nav-menu a {
        font-size: 1.5rem;
    }
}

@media (min-width: 62.5em) {
    .nav-menu a {
        font-size: 1.6rem;
    }

    .intro-banner p:first-child {
        font-size: 5rem;
    }
    
    .intro-banner p:nth-child(2) {
        font-size: 4rem;
    }
    
    .intro-banner p:nth-child(3) {
        font-size: 3rem;
    }
}

@media (max-height: 43.25em) {
    .intro-banner p:first-child {
        font-size: 3rem;
    }
    
    .intro-banner p:nth-child(2) {
        font-size: 2rem;
    }
    
    .intro-banner p:nth-child(3) {
        font-size: 1rem;
    }
}

/* Main
--------------------------------------------- */
#main {
    background-color:  #A2A2A2;
    margin: 8rem 0;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    padding: 2rem 3rem 3rem;
    max-width: 50rem;
    border-radius: 1rem;
    background-color: var(--primary-colour);
    box-shadow: var(--box-shadow);
    line-height: 2;
}

.container h1 {
    color: var(--accent-colour)
}

#projects-section {
    overflow: hidden;
    margin-top: 3rem;
}

.projects-header {
    max-width: 45rem;
}

.projects-header .projects-selector {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
    margin-top: 1rem;
}

.projects-selector button {
    cursor: pointer;
    background: none;
    border: none;
    color: var(--text-colour);
    font-size: 1.3rem;
    padding: 1rem;

    transition: transform 0.3s ease;
}
.projects-selector button:hover {
    transform: translateY(-0.5rem);
}

.project-selector-btn.active {
    text-decoration: underline;
    text-underline-offset: 1em;
    text-decoration-color: var(--accent-colour);
}

.projects-container {
    display: none;
    justify-content: center;
    flex-wrap: wrap;
    margin: 3rem auto 0;
    max-width: 65rem;
    gap: 3rem;
}

.html-css-projects {
    display: flex;
}

.project-article {
    flex: 1;
    background-color: var(--primary-colour);
    line-height: 1.5;
    border-radius: 0.5rem;
    max-width: 15rem;
    padding: 2rem;
    text-align: center;
    box-shadow: var(--box-shadow);

    position: relative;
    overflow: hidden;
}

.project-article > a {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.project-article h2 {
    color: var(--accent-colour);
    font-size: 1.2rem;
}

.project-article img {
    max-width: 15rem;
}

.project-article p {
    margin-top: 1rem;
    font-size: 0.9rem;
}

.project-article .project-overlay {
    opacity: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    transform: translateY(-100%);

    transition: transform 0.5s ease, opacity 0.5s ease;
}

.project-overlay p {
    font-size: 1.2rem;
}

.project-article:hover .project-overlay{
    transform: translateY(0);
    opacity:  1;
}

.projects-container.swoop-left {
    animation: 1s swoop-left 1 normal ease-in-out;
}

.projects-container.swoop-right {
    animation: 1s swoop-right 1 normal ease-in-out;
}

@keyframes swoop-left {
    0% {
        transform: translateX(-40%);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes swoop-right {
    0% {
        transform: translateX(40%);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

@media (min-width: 21em) {
    .project-overlay p {
        font-size: 1.5rem;
    }
}


/* Footer
--------------------------------------------- */
#footer-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--primary-colour);
    padding: 2rem;
}

#nav-up {
    color: var(--accent-colour);
    font-size: 32px;
    padding: 1rem;
}

.nav-up-btn {
    cursor: pointer;
    animation: 2s bounce-up infinite normal;
    z-index: 2;
}

@keyframes bounce-up {
    0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
    40% {transform: translateY(-15px);} 
    60% {transform: translateY(-30px);} 
}

.contact-me {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    margin-top: 1rem;
}

.contact-me a {
    background-color: var(--secondary-colour);
    color: black;
    padding: 1rem;
    border-radius: 0.25rem;
    font-weight: 600;

    transition: transform 0.3s ease;
}

.contact-me a:hover {
    background-color: var(--accent-colour);
    transform: scale(1.1);
}

.social-media-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
    margin-top: 2rem;
}

.social-media-container a {
    padding: 1rem;
}

.social-media-container i {
    font-size: 2.25rem;
    height: auto;
    color: var(--accent-colour)
}

.copyright {
    font-size: 0.9rem;
    text-align: center;
    margin-top: 2rem;
}

.copyright .footer-name {
    color: var(--accent-colour);
}

@media (min-width: 37.5em) {
    .contact-me {
        flex-direction: row;
        justify-content: center;
    }
}

